syntax = "proto3";

import "Employee.proto";

package com.bht.pim.proto.employee;
option java_multiple_files = true;

message EmployeeList {
    repeated Employee employeeList = 1;
}

message NoParam {
}

service EmployeeListService {
    rpc getEmployeeList (NoParam) returns (EmployeeList);
}